@@ -20,6 +20,7 @@ Export-Package: descent.core.ddoc,
  dtool.ast.util,
  dtool.ddoc,
  dtool.parser,
+ dtool.project,
  dtool.resolver;x-friends:="org.dsource.ddt.ide.core,org.dsource.ddt.ide.ui",
  dtool.resolver.api,
  dtool.sourcegen;x-friends:="org.dsource.ddt.ide.core,org.dsource.ddt.ide.ui",
