@@ -8,16 +8,8 @@ import dtool.util.NewUtils;
 public class ResolverUtil {
 	
 	public static Module findModule_unchecked(IModuleResolver mr, String fullyQualifiedName) {
-		try {
-			return findModule(mr, fullyQualifiedName);
-		} catch(Exception e) {
-			throw melnorme.utilbox.core.ExceptionAdapter.unchecked(e);
-		}
-	}
-	
-	public static Module findModule(IModuleResolver mr, String fullyQualifiedName) throws Exception {
 		ModuleNameDescriptor nameDesc = getNameDescriptor(fullyQualifiedName);
-		return mr.findModule(nameDesc.packages, nameDesc.moduleName);
+		return ReferenceResolver.findModuleUnchecked(mr, nameDesc.packages, nameDesc.moduleName);
 	}
 	
 	public static ModuleNameDescriptor getNameDescriptor(String moduleFullyQualifiedName) {
