@@ -1,4 +1,3 @@
 module pack.subpack; 
 
-public import pack.subpack.mod3;
-public import pack.subpack.mod4;
+int PackSubpackPackage = 2;
