@@ -1,0 +1,3 @@
+module foo_package; 
+
+int Package = 2;
